sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: missing arguments for method plusPetit in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
      if (!(plusPetit(i,j)=true)) {
            ^AlgBubbleSort1:7: error: not found: value j
      if (!(plusPetit(i,j)=true)) {
                        ^AlgBubbleSort1:8: error: not found: value j
        echange(i,j)
                  ^