sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var tri? = true
  while (tri?) {
    tri? = false 
    for (i<-0 to getNombreValeurs()-2) {
      if (!(plusPetit(i,j)=true)) {
        echange(i,j)
      }
    }
    tri?=true
  }
}
